Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.1, 6.6.2, 6.6.3, 6.6, 6.8.0 RC
-
None
-
-
1cb9e7757 (dev), 2a484b9a7 (6.8), 5acb82d58 (6.7), 396a2682a (tqtc/lts-6.5), 215b326cb (6.8.0)
-
Multimedia wk 21-22, Multimedia wk 23-24, Multimedia wk 41-42
Description
A green line artifact (sometimes a pink/red line) is visible on edge of the video output when the source is a video stream. Provided you the sample code below to reproduce the bug and also attached the screenshot for your reference.
import QtQuick import QtMultimedia Window { width: 1024 height: 768 visible: true CaptureSession { id: captureSession camera: Camera { } videoOutput: output } Item { y: -6000 width: 400 height: 6400 // to make the line more visible VideoOutput { id: output fillMode: VideoOutput.Stretch orientation: 0 anchors { fill: parent } } } Component.onCompleted: captureSession.camera.start() }
Attachments
Issue Links
- resulted from
-
QTBUG-128421 [Android] Recorder example is not able to record video
-
- Closed
-