src/plugins/multimedia/ffmpeg/qandroidcameraframe.cpp
@@ -96,9 +96,12 @@ bool QAndroidCameraFrame::parse(const QJniObject &frame)
         }
         if (pixelStrides[1] == 1)
             calculedPixelFormat = QVideoFrameFormat::Format_YUV420P;
-        else if (pixelStrides[1] == 2 && abs(buffer[1] - buffer[2]) == 1)
-            // this can be NV21, but it will converted below
-            calculedPixelFormat = QVideoFrameFormat::Format_NV12;
+        else if (pixelStrides[1] == 2) {
+            if (buffer[1] - buffer[2] == -1) // Interleaved UVUV -> NV12
+                calculedPixelFormat = QVideoFrameFormat::Format_NV12;
+            else if (buffer[1] - buffer[2] == 1) // Interleaved VUVU -> NV21
+                calculedPixelFormat = QVideoFrameFormat::Format_NV21;
+        }
         break;
     case AndroidImageFormat::HEIC:
         // QImage cannot parse HEIC
@@ -162,10 +165,22 @@ bool QAndroidCameraFrame::parse(const QJniObject &frame)
         m_pixelFormat = QVideoFrameFormat::Format_YUV420P;
         break;
     case QVideoFrameFormat::Format_NV12:
+    case QVideoFrameFormat::Format_NV21:
+        // Y-plane and combined interleaved UV-plane
         m_numberPlanes = 2;
         copyPlane(0, 0);
-        copyPlane(1, 1);
-        m_pixelFormat = QVideoFrameFormat::Format_NV12;
+
+        // Android reports U and V planes as planes[1] and planes[2] respectively, regardless of the
+        // order of interleaved samples. We point to whichever is first in memory.
+        copyPlane(1, calculedPixelFormat == QVideoFrameFormat::Format_NV21 ? 2 : 1);
+
+        // With interleaved UV plane, Android reports the size of each plane as the smallest size
+        // that includes all samples of that plane. For example, if the UV plane is [u, v, u, v],
+        // the size of the U-plane is 3, not 4. With FFmpeg we need to count the total number of
+        // bytes in the UV-plane, which is 1 more than what Android reports.
+        m_planes[1].size++;
+
+        m_pixelFormat = calculedPixelFormat;
         break;
     case QVideoFrameFormat::Format_Jpeg:
         qCWarning(qLCAndroidCameraFrame)
